# telemetry-lake

./: .dockerignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/skills/summarize-session/: SKILL.md
docker/appender/: Dockerfile
docker/ingester/: Dockerfile
docs/: iceberg-stack-deployment-plan.md  mac-setup.md  otel-logs-iceberg-ingester-implementation-plan.md  telemetry-lake-helm-README.md
docs/dev-prompts/: 2026-01-24-docker-images-health-checks.md  2026-01-24-helm-deployment-debugging.md  2026-01-24-kubernetes-helm-configuration.md  2026-01-24-move-parsing-to-consumer.md  2026-01-24-precompiled-dependencies.md  2026-01-25-end-to-end-integration-test.md  2026-01-25-exactly-once-semantics.md  2026-01-28-multi-partition-threading.md
docs/logs-telemetry-initial-design/: logs-telemetry-initial-design-response.md  logs-telemetry-initial-design.txt
helm/iceberg-stack/: Chart.yaml  values.yaml
helm/iceberg-stack/duckdb-image/: Dockerfile
helm/iceberg-stack/templates/: NOTES.txt  _helpers.tpl  duckdb-configmap.yaml  duckdb-service.yaml  duckdb-statefulset.yaml  minio-service.yaml  minio-statefulset.yaml  namespace.yaml  nessie-deployment.yaml  nessie-service.yaml  secrets.yaml
helm/telemetry-lake/: Chart.yaml  values.yaml
helm/telemetry-lake/templates/: NOTES.txt  _helpers.tpl  appender-deployment.yaml  duckdb-configmap.yaml  duckdb-service.yaml  duckdb-statefulset.yaml  ingester-deployment.yaml  ingester-service.yaml  kafka-service.yaml  kafka-statefulset.yaml  minio-service.yaml  minio-statefulset.yaml  namespace.yaml  nessie-deployment.yaml  nessie-service.yaml  secrets.yaml
proto/: telemetry_wrapper.proto
src/: config.cpp  config.hpp  http_server.cpp  http_server.hpp  main.cpp
src/appender/: buffer_manager.cpp  buffer_manager.hpp  dead_letter_queue.cpp  dead_letter_queue.hpp  iceberg_appender.cpp  iceberg_appender.hpp  iceberg_utils.cpp  iceberg_utils.hpp  log_transformer.cpp  log_transformer.hpp  main.cpp  partition_coordinator.cpp  partition_coordinator.hpp  partition_worker.cpp  partition_worker.hpp  queue_consumer.cpp  queue_consumer.hpp
src/ingester/: http_server.cpp  http_server.hpp  queue_producer.cpp  queue_producer.hpp
tests/: test_buffer_manager.cpp  test_http_server.cpp  test_iceberg_utils.cpp  test_log_transformer.cpp  test_partition_worker.cpp
